Trying to fix jfx injection